--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     ],
     "require": {
         "doctrine/dbal": "^2.8.0|^3.0",
-        "laravel/framework": "5.7.*|5.8.*|^6.0|^7.0|^8.0|~9",
+        "laravel/framework": "5.7.*|5.8.*|^6.0|^7.0|^8.0|^9|^10",
         "stripe/stripe-php": "*"
     },
     "require-dev": {
